maze.pledge.PledgeMaze.scala.error
Compilation error:
PledgeMaze:2: error: Missing closing brace `}' assumed here
override def run() {
^PledgeMaze:2: error: expected start of definition
override def run() {
         ^PledgeMaze:15: error: expected class or object definition
def keepHandOnSideWall(){
^PledgeMaze:35: error: expected class or object definition
def isDirectionFree(dir:Direction){
^