maze.pledge.PledgeMaze.scala.code
override def run() {
  while(!estSurBiscuit){
    if (isDirectionFree(Direction.EAST)==true){
    	setDirection(Direction.EAST)
      while(!estFaceMur){
        avance()
    	}
    }else{
      keepHandOnSideWall()
    }
  }
}

def keepHandOnSideWall(){
  var cpt=0
  cpt=0
 	if(estFaceMur()){
    droite()
    cpt=cpt+1
  }  
  if(estFaceMur()){
    droite()
    cpt=cpt+1
  }
  if(estFaceMur()){
    droite()
    cpt=cpt+1
  }
  avance()
  gauche()
  cpt=cpt-1
}

def isDirectionFree(dir:Direction){
  while(getDirection!=dir){
    droite()
  }
  if(estFaceMur){
    return false
  }
  else{
    while(c!=0){
    return true
  }
}